 - Toon shading infrastructure and a demo implementation [zeromus]
 - Implement lighting model in software instead of using opengl; improves (potential?) compatibility [zeromus]
 - Defer rendering until after flush. This was a necessary architectural change, as it permits savestate
   for the display list, and allows us eventually to separate the GE emulation from the rendering [zeromus]
   
 
0.7.3 -> 0.8
 Cocoa:
 - Save State As function now works. [Jeff B]
 - Recent Items menu now works. [Jeff B]
 - Opening NDS files from Finder now works. [Jeff B]
 - Added screenshot feature. [Jeff B]
 - Added preferences. [Jeff B]
 - Many more strings are translatable now. [Jeff B]
 - Default screen color is black (better represents being "off" and easier on eyes at night). [Jeff B]
 - Added sound. [Jeff B]
 - Now is a universal binary. [Jeff B]
 - Leopard resolution icon added. [Jeff B]
 - Added a Japanese translation. [Jeff B]
 - Added an optional status bar (resize handle no longer overlaps screen). [Jeff B]
 - New ROM Info and About DeSmuME windows have been added. [Jeff B]
 - Fixed several bugs in window resizing. [Jeff B]
 - Added FAT image support for homebrew games (thanks to TypeError). [Jeff B]
 - Key config can be changed on the command line. Save/load hotkeys changed (so expose doesn't override). [Jeff B]
 - Key bindings may work better on non-US keyboards now (needs testing). [Jeff B]
 general:
 - Encapsulate GDB debug stub to avoid certain problems [shash]
 - Fixed CPU LD*/ST* bugs [shash]
 - Fixed New SMB mini-games freeze [shash]
 - Fixed possible segfault in ROMReader on ia64 and amd64. [evilynux]
 - Fixed a crash bug with 2D background corrupting memory [shash]
 - Flag check optimization [carlo_bramini]
 - Applied some endian fixes in GPU (thanks to Phazz) [Jeff B]
 gtk-glade:
 - Added DeSmuME version in about dialog. [evilynux]
 - Updated website url in about dialog. [evilynux]
 - Added Brazilian Portuguese translation by Dreampeppers99. [evilynux]